docs: update Drivebase descriptions for clarity and consistency

--- a/apps/www/content/docs/storage-providers/overview.mdx
+++ b/apps/www/content/docs/storage-providers/overview.mdx
@@ -3,7 +3,7 @@ title: Overview
 description: Overview of supported storage backends in Drivebase
 ---
 
-Drivebase is designed to be cloud-agnostic, allowing you to unify multiple storage services under a single virtual file system.
+Drivebase is cloud-agnostic and built to unify multiple storage services under a single virtual file system, so you can manage files consistently across providers.
 
 ## Supported Providers
 
