--- a/apps/www/content/docs/index.mdx
+++ b/apps/www/content/docs/index.mdx
@@ -6,9 +6,9 @@ icon: "BookOpen"
 
 ![Drivebase Banner](/banner.jpeg)
 
-Drivebase is a self-hosted cloud file manager designed to unify file storage across multiple cloud providers into one seamless interface. It empowers users to organize, upload, and access files across diverse storage backends — all under one unified folder structure.
+Drivebase is a cloud-agnostic file management platform for people and teams using multiple storage providers. It gives you one unified file and folder workspace across providers, with Vault for end-to-end encrypted uploads and Smart Uploads for rule-based file routing.
 
-With Drivebase, you can break free from cloud provider lock-in and take full control of where your files are stored.
+The goal is to reduce provider lock-in while keeping storage ownership and control in your hands.
 
 ## Key Features
 
