fix: format date fields in roadmap files

--- a/apps/www/content/roadmaps/v2.0.0.mdx
+++ b/apps/www/content/roadmaps/v2.0.0.mdx
@@ -2,7 +2,7 @@
 title: v2.0.0
 description: "Introduced vault, encrypted export options, and updater service."
 version: v2.0.0
-date: 2026-02-20
+date: "2026-02-20"
 status: released
 features:
   - title: Vault
