--- a/apps/www/content/roadmaps/v2.5.0.mdx
+++ b/apps/www/content/roadmaps/v2.5.0.mdx
@@ -2,7 +2,7 @@
 title: "2.5"
 description: "Vault hardening, starred UX, Nextcloud, telemetry, and Darkibox improvements."
 version: v2.5
-date: 2026-02-23
+date: "2026-02-23"
 status: released
 features:
   - title: Vault and backup hardening
