docs: update landing page contents

--- a/apps/www/content/docs/ai/index.mdx
+++ b/apps/www/content/docs/ai/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: AI Overview
+title: Overview
 description: Understand what AI processing does in Drivebase and what is supported today.
 ---
 
