fix: update blog post schema to include optional banner image

--- a/apps/www/content/blogs/drivebase-v3.mdx
+++ b/apps/www/content/blogs/drivebase-v3.mdx
@@ -3,9 +3,8 @@ title: "AI Search, Command Palette, and Powerful File Management"
 description: "Drivebase v3.0 introduces semantic AI search, a lightning-fast command palette, real-time activity tracking, and a unified file browsing experience."
 author: "The Drivebase Team"
 date: 2026-02-26
+bannerImage: "https://picsum.photos/1200/630?random=1"
 ---
-
-![v3](https://picsum.photos/1200/630?random=1)
 
 Drivebase v3.0.0 is now live.
 
