docs: update roadmap

--- a/apps/www/content/roadmaps/v3.mdx
+++ b/apps/www/content/roadmaps/v3.mdx
@@ -6,7 +6,7 @@ date: "2026-03-01"
 features:
   - title: AI semantic search
     description: Search files semantically with OCR and object detection support.
-  - title: Real-time activity panel
+  - title: Real-time feedback
     description: View background jobs, transfer state, and progress in one panel.
   - title: Command palette
     description: Navigate files and folders quickly from anywhere in the app.
@@ -20,18 +20,6 @@ features:
     description: Move from path-heavy browsing to folder-first navigation workflows.
   - title: Activity and transfer improvements
     description: Add richer job metadata, provider rename support, and real-time progress updates.
-  - title: Stability and hardening
-    description: Finalize edge-case handling, resilience, and predictable behavior across core flows.
   - title: Performance optimization
     description: Improve responsiveness for search, navigation, sync, and large transfer operations.
-  - title: Collaboration polish
-    description: Refine sharing, permissions, and workspace ergonomics for team workflows.
-  - title: Release readiness
-    description: Complete docs, upgrade paths, and operational quality gates for stable rollout.
 ---
-
-### Release Summary
-This roadmap entry unifies the previously split v3-alpha and v3-stable tracks into one complete v3 release narrative.
-
-### Outcome
-v3 now represents the full path from feature acceleration to production-grade quality and rollout readiness.
