docs: update discord invite link

--- a/apps/www/content/blogs/introducing-drivebase.mdx
+++ b/apps/www/content/blogs/introducing-drivebase.mdx
@@ -62,7 +62,7 @@ Check out our [Documentation](/docs) for detailed guides on connecting your firs
 Drivebase is open source, and we are building it for you. We have an exciting roadmap ahead, including mobile apps, file sharing, and more integrations.
 
 - Star us on [GitHub](https://github.com/drivebase/drivebase)
-- Join the discussion on [Discord](https://discord.gg/zy3XyWcU6D)
+- Join the discussion on [Discord](https://discord.gg/5hPZwTPp68)
 - Follow us on [Twitter](https://twitter.com/drivebase_app)
 
 Take back control of your storage with Drivebase.
