--- a/apps/www/content/blogs/drivebase-v3.mdx
+++ b/apps/www/content/blogs/drivebase-v3.mdx
@@ -3,7 +3,7 @@ title: "AI Search, Command Palette, and Powerful File Management"
 description: "Drivebase v3.0 introduces semantic AI search, a lightning-fast command palette, real-time activity tracking, and a unified file browsing experience."
 author: "The Drivebase Team"
 date: 2026-02-26
-bannerImage: "https://picsum.photos/1200/630?random=1"
+bannerImage: "https://cdn.drivebase.io/images/v3-banner.png"
 ---
 
 Drivebase v3.0.0 is now live.
@@ -24,7 +24,7 @@ You are also fully in control of these models. Head to your **Workspace Settings
 
 ### Lightning-Fast Navigation: The Command Palette
 
-Say hello to the ultimate productivity booster: the Command Palette. 
+Say hello to the ultimate productivity booster: the Command Palette.
 
 ![Command Palette](https://picsum.photos/800/450?random=3)
 
